feat: Update CI/CD workflow to use Fastlane for APK builds and enhance README with download link

--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -19,14 +19,24 @@ jobs:
       with:
         flutter-version: "3.29.2"
 
+    - name: Install Fastlane
+      run: sudo gem install fastlane -NV
+
     - name: Install dependencies
       run: flutter pub get
 
-    - name: Build APK
-      run: flutter build apk --release
+    - name: Run Fastlane Build
+      run: fastlane build
 
-    - name: Guardar APK como artefacto
+    - name: Upload APK as Artifact
       uses: actions/upload-artifact@v4
       with:
         name: app-release-apk
         path: build/app/outputs/flutter-apk/app-release.apk
+
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: build/app/outputs/flutter-apk/app-release.apk
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
