--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -22,11 +22,8 @@ jobs:
     - name: Install Fastlane
       run: sudo gem install fastlane -NV
 
-    - name: Install dependencies
-      run: flutter pub get
-
     - name: Run Fastlane Build
-      run: fastlane build
+      run: fastlane android build
 
     - name: Upload APK as Artifact
       uses: actions/upload-artifact@v4
