--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -35,8 +35,9 @@ jobs:
         path: build/app/outputs/flutter-apk/app-release.apk
 
     - name: Create GitHub Release
+      if: startsWith(github.ref, 'refs/tags/')  #crea Release si es push de tag
       uses: softprops/action-gh-release@v2
       with:
         files: build/app/outputs/flutter-apk/app-release.apk
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }} 
